--- a/social-network-backend/package.json
+++ b/social-network-backend/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "socket-io": "^1.0.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "uuid": "^9.0.0"
   }
 }
