--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/socialnetwork
-spring.datasource.url=jdbc:mysql://localhost:3306/socialnetwork
+spring.datasource.url=jdbc:mysql://localhost:3306/socialnetwork_auth
 spring.datasource.username=root
 spring.datasource.password=ikraane133
-#spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+
 spring.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.continue-one-error=true
-spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
+#logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
+spring.jpa.open-in-view=false
+#jwt.header=Authorization
+jwt.secret = RBErbgeahbaethnEhaerTNbarTNgdeANGBDAEnaDRnARnAR
+
+
+
