--- a/social-network-backend/package.json
+++ b/social-network-backend/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
